# gcalcli

./: pyproject.toml  setup.py
gcalcli/: __init__.py  _types.py  actions.py  argparsers.py  cli.py  conflicts.py  deprecations.py  details.py  exceptions.py  gcal.py  printer.py  utils.py  validators.py
tests/: conftest.py  test_argparsers.py  test_cli.py  test_conflicts.py  test_gcalcli.py  test_input_validation.py  test_printer.py  test_utils.py
